# quran-qa

./: README.md  pyproject.toml
notebooks/: [01] RAG Tutorial.ipynb
