[tool.poetry]
name = "quran-qa"
version = "0.1.0"
description = ""
authors = ["Md Rayed Bin Wahed <rayedbw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dspy-ai = {extras = ["chromadb"], version = "^2.4.9"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
